--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/server.js",
   "scripts": {
     "start": "node ./src/server.js",
-    "pretest": "echo ./src --fix",
+    "pretest": "eslint ./src --fix",
     "test": "echo \"Tests complete\""
   },
   "author": "Trevor Dunn",
